--- a/CrmPackage1/CrmPackage1/CRMPackage1.csproj
+++ b/CrmPackage1/CrmPackage1/CRMPackage1.csproj
@@ -68,11 +68,6 @@
       <UniqueName>permobil_/Css/redmondTheme.css</UniqueName>
       <WebResourceType>CascadingStylesheet</WebResourceType>
     </CRMWebResource>
-    <CRMWebResource Include="WebResources\CSS\StyleSheet1.css">
-      <DisplayName>StyleSheet1.css</DisplayName>
-      <UniqueName>permobil_/css/StyleSheet1.css</UniqueName>
-      <WebResourceType>CascadingStylesheet</WebResourceType>
-    </CRMWebResource>
     <CRMWebResource Include="WebResources\images\attach.png">
       <DisplayName>attach.png</DisplayName>
       <UniqueName>permobil_/img/attach.png</UniqueName>
@@ -173,6 +168,11 @@
       <UniqueName>permobil_/js/CustomNotes.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script\Fileuploader.js">
+      <DisplayName>Fileuploader.js</DisplayName>
+      <UniqueName>permobil_/js/Fileuploader.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script\grid.locale-en.js">
       <DisplayName>grid.locale_en.js</DisplayName>
       <UniqueName>permobil_/libs/grid.locale_en.js</UniqueName>
@@ -223,9 +223,14 @@
       <UniqueName>permobil_/js/SOAP.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
-    <CRMWebResource Include="WebResources\Web Page %28HTML%29\index2.htm">
-      <DisplayName>index2.htm</DisplayName>
-      <UniqueName>permobil_/htm/index2.htm</UniqueName>
+    <CRMWebResource Include="WebResources\Script\WaterMark.js">
+      <DisplayName>WaterMark.js</DisplayName>
+      <UniqueName>permobil_/libs/WaterMark.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
+    <CRMWebResource Include="WebResources\Web Page %28HTML%29\PM_OpenDocs.htm">
+      <DisplayName>PM_OpenDocs.htm</DisplayName>
+      <UniqueName>permobil_/htm/PM_OpenDocs.htm</UniqueName>
       <WebResourceType>WebPage</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Web Page (HTML)\index.htm">
