--- a/CrmPackage1/CrmPackage1/CRMPackage1.csproj
+++ b/CrmPackage1/CrmPackage1/CRMPackage1.csproj
@@ -78,81 +78,6 @@
       <UniqueName>permobil_/img/delete.png</UniqueName>
       <WebResourceType>PNG</WebResourceType>
     </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-bg_flat_0_aaaaaa_40x100.png">
-      <DisplayName>ui_bg_flat_0_aaaaaa_40x100.png</DisplayName>
-      <UniqueName>permobil_/img/ui_bg_flat_0_aaaaaa_40x100.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-bg_flat_55_fbec88_40x100.png">
-      <DisplayName>ui_bg_flat_55_fbec88_40x100.png</DisplayName>
-      <UniqueName>permobil_/img/ui_bg_flat_55_fbec88_40x100.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-bg_glass_75_d0e5f5_1x400.png">
-      <DisplayName>ui_bg_glass_75_d0e5f5_1x400.png</DisplayName>
-      <UniqueName>permobil_/img/ui_bg_glass_75_d0e5f5_1x400.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-bg_glass_85_dfeffc_1x400.png">
-      <DisplayName>ui_bg_glass_85_dfeffc_1x400.png</DisplayName>
-      <UniqueName>permobil_/img/ui_bg_glass_85_dfeffc_1x400.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-bg_glass_95_fef1ec_1x400.png">
-      <DisplayName>ui_bg_glass_95_fef1ec_1x400.png</DisplayName>
-      <UniqueName>permobil_/img/ui_bg_glass_95_fef1ec_1x400.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-bg_gloss-wave_55_5c9ccc_500x100.png">
-      <DisplayName>ui_bg_gloss_wave_55_5c9ccc_500x100.png</DisplayName>
-      <UniqueName>permobil_/img/ui_bg_gloss_wave_55_5c9ccc_500x100.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-bg_inset-hard_100_f5f8f9_1x100.png">
-      <DisplayName>ui_bg_inset_hard_100_f5f8f9_1x100.png</DisplayName>
-      <UniqueName>permobil_/ui_bg_inset_hard_100_f5f8f9_1x100.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-bg_inset-hard_100_fcfdfd_1x100.png">
-      <DisplayName>ui_bg_inset_hard_100_fcfdfd_1x100.png</DisplayName>
-      <UniqueName>permobil_/ui_bg_inset_hard_100_fcfdfd_1x100.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-icons_217bc0_256x240.png">
-      <DisplayName>ui_icons_217bc0_256x240.png</DisplayName>
-      <UniqueName>permobil_/img/ui_icons_217bc0_256x240.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-icons_2e83ff_256x240.png">
-      <DisplayName>ui_icons_2e83ff_256x240.png</DisplayName>
-      <UniqueName>permobil_/img/ui_icons_2e83ff_256x240.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-icons_469bdd_256x240.png">
-      <DisplayName>ui_icons_469bdd_256x240.png</DisplayName>
-      <UniqueName>permobil_/img/ui_icons_469bdd_256x240.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-icons_6da8d5_256x240.png">
-      <DisplayName>ui_icons_6da8d5_256x240.png</DisplayName>
-      <UniqueName>permobil_/img/ui_icons_6da8d5_256x240.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-icons_cd0a0a_256x240.png">
-      <DisplayName>ui_icons_cd0a0a_256x240.png</DisplayName>
-      <UniqueName>permobil_/img/ui_icons_cd0a0a_256x240.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-icons_d8e7f3_256x240.png">
-      <DisplayName>ui_icons_d8e7f3_256x240.png</DisplayName>
-      <UniqueName>permobil_/img/ui_icons_d8e7f3_256x240.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\images\ui-icons_f9bd01_256x240.png">
-      <DisplayName>ui_icons_f9bd01_256x240.png</DisplayName>
-      <UniqueName>permobil_/img/ui_icons_f9bd01_256x240.png</UniqueName>
-      <WebResourceType>PNG</WebResourceType>
-    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script\Common.js">
       <DisplayName>Common.js</DisplayName>
       <UniqueName>permobil_/js/Common.js</UniqueName>
@@ -221,6 +146,11 @@
     <CRMWebResource Include="WebResources\Script\SOAP.js">
       <DisplayName>SOAP.js</DisplayName>
       <UniqueName>permobil_/js/SOAP.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script\UserRoleCheck.js">
+      <DisplayName>UserRoleCheck.js</DisplayName>
+      <UniqueName>permobil_/UserRoleCheck.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script\WaterMark.js">
